src/routes/game/components/elements/countersOverlay/CountersOverlay.module.css
.label.label {
  background-color: var(--near-black);
  color: var(--theme-primary);
  order: 99;
  position: absolute;
  bottom: 10px;
  left: 5px;
  right: 3px;
  text-align: center;
  border: 0.5px solid var(--theme-primary);
  border-radius: 5px;
  z-index: 100;
  text-overflow: ellipsis;
  overflow: hidden;
  font-weight: 500;
  padding: 2px 4px;
  font-size: 0.75rem;
  line-height: 1;
}

@media only screen and (max-width: 768px) {
  .label.label {
    font-size: 0.55rem;
    padding: 1px 3px;
    bottom: 6px;
    left: 3px;
    right: 2px;
    border-radius: 3px;
    border: 0.25px solid var(--theme-primary);
  }
}

@media only screen and (max-width: 480px) {
  .label.label {
    display: none;
  }
}

.countersCover.countersCover {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  inset: 0;
  z-index: 2;
  cursor: default;
  align-content: center;
  opacity: var(--counters-opacity, 1);
  transition: opacity 0.2s ease;
  pointer-events: var(--counters-pointer-events, auto);
  overflow: visible !important;
}

.number.number {
  border-radius: 100%;
  border-style: solid;
  border-color: black;
  border-width: 2px;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  max-height: 1.75em;
  min-height: 1em;
  width: 100%;
  max-width: 1.75em;
  min-width: 1em;
  font-size: 1.5em;
  background-color: var(--white);
  text-align: center;
  cursor: default;
}

.defCounter.defCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-defense.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
  overflow: visible;
}

.steamCounter.steamCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-steamCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
}

.energyCounter.energyCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-energyCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
}

.hauntCounter.hauntCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-hauntCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
}

.verseCounter.verseCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-verseCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
}

.doomCounter.doomCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-doomCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
}

.lessonCounter.lessonCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-lessonCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
}

.rustCounter.rustCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-rustCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
}

.flowCounter.flowCounter {
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 1.75em;
  width: 1.75em;
  background-image: url('../../../../../img/symbols/symbol-flowCounter.png');
  background-position: center;
  background-size: contain;
  text-align: center;
  font-size: 1.5em;
  color: var(--white);
  text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000,
    -1px -1px 0 #000;
  z-index: -1;
  cursor: default;
  border: 0px;
}
/* ... */

